# frappe_connector

./: LICENSE.txt  README.md  pyproject.toml
frappe_connector/: __init__.py  connector.py
