[project]
name = "frappe-connector"
version = "0.1.0"
description = "A lightweight Python client for interacting with Frappe / ERPNext instances"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frappe_connector"]
