[project]
name = "frappe-connector"
version = "0.1.2"
description = "A lightweight Python client for connecting and interacting with Frappe instances"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/nitefury7/frappe_connector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frappe_connector"]

[dependency-groups]
dev = ["pytest"]
